Updated README and Demo Notebook

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -4,6 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Instructions\n",
+    "\n",
+    "This notebook provides you with a demo of the app. \n",
+    "\n",
+    "Ensure the following setup is in place before getting started:\n",
+    "1. create `setup.yaml` in the current directory.\n",
+    "    ```python\n",
+    "    environment:\n",
+    "    LANGSMITH_TRACING_V2: \"true\"\n",
+    "    LANGCHAIN_ENDPOINT: \"https://api.smith.langchain.com\"\n",
+    "    LANGSMITH_ENDPOINT: \"https://api.smith.langchain.com\"\n",
+    "    LANGSMITH_API_KEY: \"YOUR_API_KEY\"\n",
+    "    LANGSMITH_PROJECT: \"PROJECT-NAME\"\n",
+    "    TAVILY_API_KEY: \"YOUR_API_KEY\"\n",
+    "    GROQ_API_KEY: \"YOUR_API_KEY\"\n",
+    "    OPENAI_API_KEY: \"YOUR_API_KEY\" \n",
+    "    DATABASE_URI: \"postgresql://postgres:postgres@localhost:5432/postgres\" \n",
+    "    ```\n",
+    "2. Ensure that [ETL](etl/) is setup and running."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Setup APIs and Endpoints"
    ]
   },
@@ -50,7 +75,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load PostgreSQL-DB"
+    "## Load PostgreSQL-DB\n",
+    "\n",
+    "Ensure that the [ETL](etl/) is setup and running before running this cell. "
    ]
   },
   {
@@ -385,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyst LLM"
+    "### Analyst Agent"
    ]
   },
   {
